fix: error on mobile nav

--- a/src/index.css
+++ b/src/index.css
@@ -50,13 +50,15 @@
 *{
   padding: 0;
   margin: 0;
+  /* overflow-x: hidden; */
 }
 
 html, body{
   height: 100%;
   margin: 0;
   padding: 0;
-
+  overflow-y: auto;
+  margin-bottom: 80px;
 }
 
 
